hphp/test/slow/hack_arr_compat/reified_shape.php.expectf
darray: []
varray: 
Catchable fatal error: Value returned from function check() must be of type shape('a' => int), varray given in %s/reified_shape.php on line 10
